--- a/.gitignore
+++ b/.gitignore
@@ -48,9 +48,7 @@ dmypy.json
 .ipynb_checkpoints
 
 # Project specific
-research.db
-research.db-*
-research/raw/
+.winterfox/
 *.db
 *.db-shm
 *.db-wal
