Replace algorithmic consensus with LLM-driven synthesis
BREAKING CHANGE: Multi-agent consensus now uses LLM synthesis instead of
algorithmic Jaccard similarity matching.

## What Changed

**Core Implementation:**
- src/winterfox/agents/pool.py:
  - Replaced dispatch_with_consensus() with dispatch_with_synthesis()
  - Removed _group_similar_findings() and _merge_findings()
  - Added _synthesize_with_llm(), _format_agent_outputs(), _parse_synthesis_metadata()
  - Primary agent now receives all outputs and intelligently synthesizes them
  - Changed result type from ConsensusResult to SynthesisResult

**Configuration:**
- src/winterfox/config.py:
  - Added 'role' field to AgentConfig (primary | secondary)
  - Added validation: exactly one primary agent required for multi-agent
  - Added get_primary_agent_index() method
  - First agent auto-promoted to primary if none specified

**Orchestrator:**
- src/winterfox/orchestrator/cycle.py:
  - Updated to call dispatch_with_synthesis()
  - Changed import from ConsensusResult to SynthesisResult

**CLI:**
- src/winterfox/cli.py:
  - Pass primary_agent_index when creating AgentPool

## Why LLM Synthesis?

Algorithmic consensus was too simplistic:
- Jaccard similarity can't understand semantic meaning
- Doesn't handle contradictions intelligently
- Can't weight evidence quality
- Requires tuning similarity thresholds

LLM synthesis is superior:
- Understands semantic similarity beyond keywords
- Can identify and explain contradictions
- Evaluates evidence quality, not just count
- Works across any domain without tuning
- Provides synthesis reasoning in self_critique

## Testing

- Completely rewrote tests/unit/test_agents/test_pool.py
- 10 new tests covering LLM synthesis behavior
- Tests mock primary agent synthesis responses
- Validates primary agent selection and error handling

## Documentation

- Updated CLAUDE.md to explain LLM synthesis
- Updated examples/market-research/winterfox.toml with role field
- Added inline comment

--- a/examples/market-research/winterfox.toml
+++ b/examples/market-research/winterfox.toml
@@ -56,7 +56,7 @@ Success Criteria:
 # Multi-Agent Setup (Quality + Diversity)
 # ============================================================
 
-# Primary Agent: Claude Opus 4.6 (Best for complex analysis)
+# Primary Agent: Claude Opus 4.6 (Best for complex analysis + synthesis)
 [[agents]]
 provider = "anthropic"
 model = "claude-opus-4-20251120"
@@ -65,6 +65,7 @@ timeout = 300
 max_retries = 3
 supports_native_search = true  # Extended thinking with web search
 use_subscription = false
+role = "primary"  # This agent synthesizes results from all agents
 
 # Secondary Agent: Kimi 2.5 (Cost-effective, diverse perspective)
 # Uncomment to enable multi-agent consensus
@@ -73,6 +74,7 @@ use_subscription = false
 # model = "kimi-2.5"
 # api_key_env = "MOONSHOT_API_KEY"
 # timeout = 300
+# role = "secondary"  # This agent provides independent research
 
 # ============================================================
 # Search Configuration (Multi-Provider with Fallback)
