Rename 'cycle' command to 'run' for better intuitiveness
BREAKING CHANGE: The 'winterfox cycle' command is now 'winterfox run'

Changes:
- Renamed CLI command from 'cycle' to 'run'
- Updated all documentation (README, CLAUDE.md, GETTING_STARTED.md)
- Updated examples (market-research configuration)
- Updated help text and success messages

Old usage:
  winterfox cycle -n 10

New usage:
  winterfox run -n 10

Rationale:
'run' is more intuitive than 'cycle' for users who want to start
research. The term 'cycle' is implementation detail that users don't
need to know about.

Migration:
Users should update their scripts/workflows from 'winterfox cycle' to
'winterfox run'. All other options remain the same (-n, --focus, etc.)

--- a/examples/market-research/winterfox.toml
+++ b/examples/market-research/winterfox.toml
@@ -169,7 +169,7 @@ enforce_isolation = false
 #    (or copy this file to your project directory as winterfox.toml)
 #
 # 3. Run research:
-#    winterfox cycle -n 10  # Run 10 cycles
+#    winterfox run -n 10  # Run 10 cycles
 #
 # 4. Check progress:
 #    winterfox status
